deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: datananite
  labels:
    app: datananite
