deployment/k8s/namespace2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: datananite2
  labels:
    app: datananite2
