deployment/k8s/ingress-workbench2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datananite-workbench2-ingress
  namespace: datananite2
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "datananite-workbench-ip"
spec:
  rules:
  - host: datananite-workbench.endpoints.cog01k24f1ea555zdv7ynzthxanz5.cloud.goog
    http:
      paths:
      - path: /streamlit/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: streamlit-ui-service
            port:
              number: 8502
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: tech-ui-service
            port:
              number: 8006
